added content to the index.html

--- a/index.html
+++ b/index.html
@@ -24,6 +24,93 @@
         </nav>
     </header>
 
+    <main class="main">
+        <section class="hero container">
+            <h1 class="hero-heading">Responsive Layouts don't have to be a struggle</h1>
+            <div class="hero-text">
+                <p class="hero-text-p">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum architecto vel, voluptas ad nobis cum itaque fugiat voluptatem atque consectetur minima impedit consequatur, voluptate temporibus commodi similique officiis eligendi aspernatur.
+                </p>
+                <button class="hero-text-btn">I want to learn</button>
+            </div>
+        </section>
+        <section class="features container">
+            <div class="feature">
+                <h3>Mobile-first</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat, vel eum impedit vitae quam odio est deserunt. Voluptates qui temporibus accusantium molestiae repellat numquam veniam. Quam modi ut eligendi voluptatem.</p>
+            </div>
+            <div class="feature">
+                <h3>Mobile-first</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat, vel eum impedit vitae quam odio est deserunt. Voluptates qui temporibus accusantium molestiae repellat numquam veniam. Quam modi ut eligendi voluptatem.</p>
+            </div>
+            <div class="feature">
+                <h3>Mobile-first</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat, vel eum impedit vitae quam odio est deserunt. Voluptates qui temporibus accusantium molestiae repellat numquam veniam. Quam modi ut eligendi voluptatem.</p>
+            </div>
+        </section>
+        <section class="content container">
+            <article>
+                <h3>It doesn't have to be so hard</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, veniam non minus asperiores eos repudiandae, aliquam, dignissimos quaerat omnis voluptatum quod repellendus fugit aut eveniet perspiciatis mollitia iusto fuga corporis?</p>
+                <img src="/resources/the-image.jpg" alt="Hand-drawn wireframes of web pages">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit distinctio sint ipsum, tempore porro cum, consequatur perspiciatis, saepe deserunt consectetur hic blanditiis similique dolores officiis ullam placeat libero labore
+                    nulla!
+                </p>
+            </article>
+            <aside>
+                <div class="side">
+                    <h3>Break it down</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quasi officiis tempore? Iusto necessitatibus voluptates minima dolore neque ipsam beatae nisi maxime, expedita eaque assumenda, officia cum autem. Magnam, quasi.</p>
+                </div>
+                <div class="side">
+                    <h3>Break it down</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quasi officiis tempore? Iusto necessitatibus voluptates minima dolore neque ipsam beatae nisi maxime, expedita eaque assumenda, officia cum autem. Magnam, quasi.</p>
+                </div>
+                <div class="side">
+                    <h3>Break it down</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quasi officiis tempore? Iusto necessitatibus voluptates minima dolore neque ipsam beatae nisi maxime, expedita eaque assumenda, officia cum autem. Magnam, quasi.</p>
+                </div>
+            </aside>
+        </section>
+    </main>
+
+    <footer class="footer container">
+        <h2 class="footer-heading">just scratching the surface</h2>
+        <div class="footer-content">
+            <div class="footer-text">
+                <h5>About our company</h5>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error a nam quae aspernatur veritatis? Ut, unde illo sed rerum quasi ad in nostrum autem, quis error, quo aspernatur? At, recusandae.</p>
+            </div>
+            <div class="footer-links">
+                <div>
+                    <h5>Getting around</h5>
+                    <ul class="footer-nav-list">
+                        <li class="footer-nav-list-item">Home</li>
+                        <li class="footer-nav-list-item">About</li>
+                        <li class="footer-nav-list-item">Contact</li>
+                    </ul>
+                </div>
+                <div>
+                    <h5>Other things</h5>
+                    <ul class="footer-nav-list">
+                        <li class="footer-nav-list-item">Lorem</li>
+                        <li class="footer-nav-list-item">Ipsum</li>
+                        <li class="footer-nav-list-item">Dolor</li>
+                        <li class="footer-nav-list-item">Sit amet</li>
+                    </ul>
+                </div>
+                <div>
+                    <h5>And much more</h5>
+                    <ul class="footer-nav-list">
+                        <li class="footer-nav-list-item">Lorem</li>
+                        <li class="footer-nav-list-item">Ipsum</li>
+                        <li class="footer-nav-list-item">Dolor</li>
+                        <li class="footer-nav-list-item">Sit amet</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
