fixed image display problem

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <header class="header txt-center">
         <div class="container d-flex">
-            <a href="index.html" class="logo-link"><img class="logo" src="/resources/images/logo.svg" alt="Logo"></a>
+            <a href="index.html" class="logo-link"><img class="logo" src="resources/images/logo.svg" alt="Logo"></a>
             <div class="btn-menu-container"><button class="btn-menu">
                 <svg class="btn-menu-svg" data-name="Layer 3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128"><path d="M97.092 36.078H30.908a2.111 2.111 0 0 0 0 4.222h66.184a2.111 2.111 0 0 0 0-4.222zM97.092 61.889H30.908a2.111 2.111 0 0 0 0 4.222h66.184a2.111 2.111 0 0 0 0-4.222zM97.092 87.7H30.908a2.111 2.111 0 0 0 0 4.222h66.184a2.111 2.111 0 0 0 0-4.222z"/></svg>
             </button></div>
@@ -70,7 +70,7 @@
                 <article>
                     <h3 class="heading-theme">It doesn't have to be so hard</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, veniam non minus asperiores eos repudiandae, aliquam, dignissimos quaerat omnis voluptatum quod repellendus fugit aut eveniet perspiciatis mollitia iusto fuga corporis?</p>
-                    <img src="/resources/images/the-image.jpg" alt="Hand-drawn wireframes of web pages">
+                    <img src="resources/images/the-image.jpg" alt="Hand-drawn wireframes of web pages">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit distinctio sint ipsum, tempore porro cum, consequatur perspiciatis, saepe deserunt consectetur hic blanditiis similique dolores officiis ullam placeat libero labore
                         nulla!
                     </p>
