added media query for medium-size displays

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <main class="main">
         <section class="hero">
-            <div class="container txt-center">
+            <div class="hero-content container txt-center">
                 <h1 class="hero-heading">Responsive Layouts <span class="heading-theme">don't have to be a struggle</span></h1>
                 <div class="hero-text">
                     <p class="hero-text-p">
@@ -51,15 +51,15 @@
         </section>
         <section class="features txt-center">
             <div class="container">
-                <div class="feature">
+                <div class="feature small-container">
                     <h3 class="heading-theme">Mobile-first</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat, vel eum impedit vitae quam odio est deserunt. Voluptates qui temporibus accusantium molestiae repellat numquam veniam. Quam modi ut eligendi voluptatem.</p>
                 </div>
-                <div class="feature">
+                <div class="feature small-container">
                     <h3 class="heading-theme">Efficient</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat, vel eum impedit vitae quam odio est deserunt. Voluptates qui temporibus accusantium molestiae repellat numquam veniam. Quam modi ut eligendi voluptatem.</p>
                 </div>
-                <div class="feature">
+                <div class="feature small-container">
                     <h3 class="heading-theme">Done right</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat, vel eum impedit vitae quam odio est deserunt. Voluptates qui temporibus accusantium molestiae repellat numquam veniam. Quam modi ut eligendi voluptatem.</p>
                 </div>
@@ -67,7 +67,7 @@
         </section>
         <section class="content">
             <div class="container">
-                <article>
+                <article class="content-article">
                     <h3 class="heading-theme">It doesn't have to be so hard</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, veniam non minus asperiores eos repudiandae, aliquam, dignissimos quaerat omnis voluptatum quod repellendus fugit aut eveniet perspiciatis mollitia iusto fuga corporis?</p>
                     <img src="resources/images/the-image.jpg" alt="Hand-drawn wireframes of web pages">
@@ -75,16 +75,16 @@
                         nulla!
                     </p>
                 </article>
-                <aside class="txt-center">
-                    <div class="side">
+                <aside class="content-aside txt-center">
+                    <div class="side small-container">
                         <h3>Break it down</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quasi officiis tempore? Iusto necessitatibus voluptates minima dolore neque ipsam beatae nisi maxime, expedita eaque assumenda, officia cum autem. Magnam, quasi.</p>
                     </div>
-                    <div class="side">
+                    <div class="side small-container">
                         <h3>Work your way up</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quasi officiis tempore? Iusto necessitatibus voluptates minima dolore neque ipsam beatae nisi maxime, expedita eaque assumenda, officia cum autem. Magnam, quasi.</p>
                     </div>
-                    <div class="side">
+                    <div class="side small-container">
                         <h3>Don't give up</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quasi officiis tempore? Iusto necessitatibus voluptates minima dolore neque ipsam beatae nisi maxime, expedita eaque assumenda, officia cum autem. Magnam, quasi.</p>
                     </div>
