added large display media query

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald:wght@700&display=swap" rel="stylesheet">
 
     <!-- css stylesheet -->
     <link rel="stylesheet" href="style.css">
@@ -19,19 +19,19 @@
 <body>
     <header class="header txt-center">
         <div class="container d-flex">
-            <a href="index.html" class="logo-link"><img class="logo" src="resources/images/logo.svg" alt="Logo"></a>
+            <a href="index.html" class="logo"><img src="resources/images/logo.svg" alt="Logo"></a>
             <div class="btn-menu-container"><button class="btn-menu">
                 <svg class="btn-menu-svg" data-name="Layer 3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128"><path d="M97.092 36.078H30.908a2.111 2.111 0 0 0 0 4.222h66.184a2.111 2.111 0 0 0 0-4.222zM97.092 61.889H30.908a2.111 2.111 0 0 0 0 4.222h66.184a2.111 2.111 0 0 0 0-4.222zM97.092 87.7H30.908a2.111 2.111 0 0 0 0 4.222h66.184a2.111 2.111 0 0 0 0-4.222z"/></svg>
             </button></div>
             <nav class="nav">
                 <ul class="nav-list">
-                    <li class="nav-list--item">Home</li>
-                    <li class="nav-list--item">About</li>
-                    <li class="nav-list--item">Contact</li>
+                    <li class="nav-list--item"><a href="#">Home</a></li>
+                    <li class="nav-list--item"><a href="#">About</a></li>
+                    <li class="nav-list--item"><a href="#">Contact</a></li>
                 </ul>
                 <ul class="nav-list">
-                    <li class="nav-list--item">Sign In</li>
-                    <li class="nav-list--item">Sign Up</li>
+                    <li class="nav-list--item"><a href="#">Sign In</a></li>
+                    <li class="nav-list--item"><a href="#"><button class="btn signup-btn">Sign Up</button></a></li>
                 </ul>
             </nav>
         </div>
@@ -45,7 +45,7 @@
                     <p class="hero-text-p">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum architecto vel, voluptas ad nobis cum itaque fugiat voluptatem atque consectetur minima impedit consequatur, voluptate temporibus commodi similique officiis eligendi aspernatur.
                     </p>
-                    <button class="hero-text-btn">I want to learn</button>
+                    <button class="btn hero-text-btn">I want to learn</button>
                 </div>
             </div>
         </section>
@@ -68,7 +68,7 @@
         <section class="content">
             <div class="container">
                 <article class="content-article">
-                    <h3 class="heading-theme">It doesn't have to be so hard</h3>
+                    <h2 class="heading-theme">It doesn't have to be so hard</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, veniam non minus asperiores eos repudiandae, aliquam, dignissimos quaerat omnis voluptatum quod repellendus fugit aut eveniet perspiciatis mollitia iusto fuga corporis?</p>
                     <img src="resources/images/the-image.jpg" alt="Hand-drawn wireframes of web pages">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit distinctio sint ipsum, tempore porro cum, consequatur perspiciatis, saepe deserunt consectetur hic blanditiis similique dolores officiis ullam placeat libero labore
@@ -105,27 +105,27 @@
                     <div>
                         <h5 class="heading-theme">Getting around</h5>
                         <ul class="footer-nav-list">
-                            <li class="footer-nav-list-item">Home</li>
-                            <li class="footer-nav-list-item">About</li>
-                            <li class="footer-nav-list-item">Contact</li>
+                            <li class="footer-nav-list-item"><a href="#">Home</a></li>
+                            <li class="footer-nav-list-item"><a href="#">About</a></li>
+                            <li class="footer-nav-list-item"><a href="#">Contact</a></li>
                         </ul>
                     </div>
                     <div>
                         <h5 class="heading-theme">Other things</h5>
                         <ul class="footer-nav-list">
-                            <li class="footer-nav-list-item">Lorem</li>
-                            <li class="footer-nav-list-item">Ipsum</li>
-                            <li class="footer-nav-list-item">Dolor</li>
-                            <li class="footer-nav-list-item">Sit amet</li>
+                            <li class="footer-nav-list-item"><a href="#">Lorem</a></li>
+                            <li class="footer-nav-list-item"><a href="#">Ipsum</a></li>
+                            <li class="footer-nav-list-item"><a href="#">Dolor</a></li>
+                            <li class="footer-nav-list-item"><a href="#">Sit amet</a></li>
                         </ul>
                     </div>
                     <div>
                         <h5 class="heading-theme">And much more</h5>
                         <ul class="footer-nav-list">
-                            <li class="footer-nav-list-item">Lorem</li>
-                            <li class="footer-nav-list-item">Ipsum</li>
-                            <li class="footer-nav-list-item">Dolor</li>
-                            <li class="footer-nav-list-item">Sit amet</li>
+                            <li class="footer-nav-list-item"><a href="#">Lorem</a></li>
+                            <li class="footer-nav-list-item"><a href="#">Ipsum</a></li>
+                            <li class="footer-nav-list-item"><a href="#">Dolor</a></li>
+                            <li class="footer-nav-list-item"><a href="#">Sit amet</a></li>
                         </ul>
                     </div>
                 </div>
