--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald:wght@700&display=swap" rel="stylesheet">
 
+    <!-- script -->
+    <script src="script.js"></script>
+
     <!-- css stylesheet -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -20,10 +23,10 @@
     <header class="header txt-center">
         <div class="container d-flex">
             <a href="index.html" class="logo"><img src="resources/images/logo.svg" alt="Logo"></a>
-            <div class="btn-menu-container"><button class="btn-menu">
-                <svg class="btn-menu-svg" data-name="Layer 3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128"><path d="M97.092 36.078H30.908a2.111 2.111 0 0 0 0 4.222h66.184a2.111 2.111 0 0 0 0-4.222zM97.092 61.889H30.908a2.111 2.111 0 0 0 0 4.222h66.184a2.111 2.111 0 0 0 0-4.222zM97.092 87.7H30.908a2.111 2.111 0 0 0 0 4.222h66.184a2.111 2.111 0 0 0 0-4.222z"/></svg>
-            </button></div>
             <nav class="nav">
+                <div class="btn-menu-container"><button class="btn-menu">
+                    <svg class="btn-menu-svg" data-name="Layer 3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128"><path d="M97.092 36.078H30.908a2.111 2.111 0 0 0 0 4.222h66.184a2.111 2.111 0 0 0 0-4.222zM97.092 61.889H30.908a2.111 2.111 0 0 0 0 4.222h66.184a2.111 2.111 0 0 0 0-4.222zM97.092 87.7H30.908a2.111 2.111 0 0 0 0 4.222h66.184a2.111 2.111 0 0 0 0-4.222z"/></svg>
+                </button></div>
                 <ul class="nav-list">
                     <li class="nav-list--item"><a href="#">Home</a></li>
                     <li class="nav-list--item"><a href="#">About</a></li>
