fixed working of nav-menu button

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald:wght@700&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,700&family=Montserrat&family=Oswald:wght@700&display=swap" rel="stylesheet">
     <!-- script -->
     <script src="script.js"></script>
 
@@ -22,20 +21,25 @@
 <body>
     <header class="header txt-center">
         <div class="container d-flex">
-            <a href="index.html" class="logo"><img src="resources/images/logo.svg" alt="Logo"></a>
+            <a href="index.html" class="logo">
+                CRL
+                <!-- <img src="resources/images/logo.svg" alt="Logo"> -->
+            </a>
             <nav class="nav">
                 <div class="btn-menu-container"><button class="btn-menu">
                     <svg class="btn-menu-svg" data-name="Layer 3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128"><path d="M97.092 36.078H30.908a2.111 2.111 0 0 0 0 4.222h66.184a2.111 2.111 0 0 0 0-4.222zM97.092 61.889H30.908a2.111 2.111 0 0 0 0 4.222h66.184a2.111 2.111 0 0 0 0-4.222zM97.092 87.7H30.908a2.111 2.111 0 0 0 0 4.222h66.184a2.111 2.111 0 0 0 0-4.222z"/></svg>
                 </button></div>
-                <ul class="nav-list">
-                    <li class="nav-list--item"><a href="#">Home</a></li>
-                    <li class="nav-list--item"><a href="#">About</a></li>
-                    <li class="nav-list--item"><a href="#">Contact</a></li>
-                </ul>
-                <ul class="nav-list">
-                    <li class="nav-list--item"><a href="#">Sign In</a></li>
-                    <li class="nav-list--item"><a href="#"><button class="btn signup-btn">Sign Up</button></a></li>
-                </ul>
+                <div class="navs">
+                    <ul class="nav-list">
+                        <li class="nav-list--item"><a href="#">Home</a></li>
+                        <li class="nav-list--item"><a href="#">About</a></li>
+                        <li class="nav-list--item"><a href="#">Contact</a></li>
+                    </ul>
+                    <ul class="nav-list">
+                        <li class="nav-list--item"><a href="#">Sign In</a></li>
+                        <li class="nav-list--item"><a href="#"><button class="btn signup-btn">Sign Up</button></a></li>
+                    </ul>
+                </div>
             </nav>
         </div>
     </header>
